--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-uvicorn
-pydantic
-fastapi
-firebase_admin
-pycoingecko
-psycopg2-binary
+fastapi==0.115.12
+firebase_admin==6.7.0
+psycopg2==2.9.10
+pycoingecko==3.2.0
+pydantic==2.11.4
