--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,14 @@
 {
-"version": 2,  
-"builds": [
-  {
-    "src": "main.py",
-    "use": "@vercel/python",
-    "config": { 
-      "maxLambdaSize": "15mb"
-      }
-   
-  }
-
-],
-"routes": [
-  {
-    "src": "/(.*)",
-    "dest": "main.py"
-  }
-]
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.py"
+    }
+  ]
 }
